samples/_failures_safe/1761504310_09b693_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5a69bb63.c: In function ‘main’:
./samples/SAFE/__tmp_5a69bb63.c:162:5: error: expected expression at end of input
  162 |     if (multiply_result ==
      |     ^~
./samples/SAFE/__tmp_5a69bb63.c:162:5: error: expected declaration or statement at end of input
